feat: 프로필 생성 기능 구현 (#76)
* feat: 프로필 생성 기능 구현

* refactor: 리뷰 피드백 반영

* refactor: user_role 엔티티 및 관련 로직 생성

* refactor: import SuperBuilder

* refactor: toList 문법 수정